--- a/docker/app/src/css/style.scss
+++ b/docker/app/src/css/style.scss
@@ -1,2 +1,2 @@
-@import "header", "login", "create", "main", "add", "footer";
+@import "header", "login", "create", "main", "add", "update", "footer";
 
