--- a/docker/app/src/css/main.scss
+++ b/docker/app/src/css/main.scss
@@ -22,11 +22,14 @@
         margin: 0;
       }
       &-edit {
-        margin: 0 0 0 auto;
+        // margin: 0 0 0 auto;
         padding: 0 10px;
         background-color: #999;
         color: #333;
         font-size: 1.4rem;
+        &:first-of-type {
+          margin: 0 0 0 auto;
+        }
         &:hover {
           opacity: .7;
         }
