--- a/docker/app/src/css/style.css
+++ b/docker/app/src/css/style.css
@@ -130,11 +130,14 @@
 }
 
 .main__list__task-edit {
-  margin: 0 0 0 auto;
   padding: 0 10px;
   background-color: #999;
   color: #333;
   font-size: 1.4rem;
+}
+
+.main__list__task-edit:first-of-type {
+  margin: 0 0 0 auto;
 }
 
 .main__list__task-edit:hover {
