[update]Redesigned and responsive

--- a/docker/app/src/css/header.scss
+++ b/docker/app/src/css/header.scss
@@ -1,7 +1,19 @@
 .header {
-  background-color: #999;
-  color: #111;
+  background-color: #A69485;
+  // color: #000;
   font-size: 30px;
   padding: 10px 20px;
   height: 5vh;
+  display: flex;
+  align-items: center;
+  &__left {
+    color: #BFC7D9;
+    margin: 0 auto 0 0;
+    font-size: 1.6rem;
+  }
+  &__right {
+    color: #BFC7D9;
+    margin: 0 0 0 auto;
+    font-size: 1.6rem;
+  }
 }
