--- a/docker/app/src/css/footer.scss
+++ b/docker/app/src/css/footer.scss
@@ -1,7 +1,10 @@
 .footer {
-  background-color: #999;
-  color: #111;
-  text-align: center;
+  background-color: #A69485;
+  color: #BFC7D9;
   padding: 10px 0;
   height: 5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.4rem;
 }
