--- a/docker/app/src/css/style.css
+++ b/docker/app/src/css/style.css
@@ -1,3 +1,45 @@
+.common {
+  padding: 20px;
+  background-color: #D9D9D9;
+  text-align: center;
+  height: 81vh;
+}
+
+.common__title {
+  font-weight: normal;
+  color: #466C8C;
+}
+
+.common__btn {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.common__btn * {
+  width: 160px;
+  border: #666 solid 1px;
+  border-radius: 5px;
+  color: #BFC7D9;
+  font-weight: normal;
+  font-size: 16px;
+  padding: 10px 0;
+  background-color: #A69485;
+  cursor: pointer;
+}
+
+.common__btn *:hover {
+  opacity: .6;
+}
+
+.common__btn__left {
+  display: inline-block;
+}
+
+.common__btn__right {
+  display: inline-block;
+}
+
 .header {
   background-color: #A69485;
   font-size: 30px;
@@ -20,49 +62,12 @@
 }
 
 .login {
-  padding: 20px;
-  background-color: #f0f0f0;
-  text-align: center;
-  height: 81vh;
-}
-
-.login__title {
-  font-weight: normal;
-}
-
-.login__form {
   width: 400px;
   margin: 0 auto;
 }
 
-.login__form__input {
+.login__form {
   margin: 10px 0;
-}
-
-.login__form__btn {
-  margin-top: 20px;
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.login__form__btn * {
-  width: 160px;
-  border: #666 solid 1px;
-  border-radius: 5px;
-  color: #111;
-  font-weight: normal;
-  font-size: 16px;
-  padding: 10px 0;
-  cursor: pointer;
-}
-
-.login__form__btn *:hover {
-  opacity: .6;
-}
-
-.login__form__btn-left {
-  display: inline-block;
-  background-color: #f0f0f0;
 }
 
 .create {
