--- a/docker/app/src/css/footer.scss
+++ b/docker/app/src/css/footer.scss
@@ -8,3 +8,11 @@
   align-items: center;
   font-size: 1.4rem;
 }
+@media screen and(max-width: 959px) {
+
+}
+@media screen and(max-width: 480px) {
+  .footer {
+    font-size: 1rem;
+  }
+}
