--- a/docker/app/src/css/style.css
+++ b/docker/app/src/css/style.css
@@ -219,3 +219,9 @@
   align-items: center;
   font-size: 1.4rem;
 }
+
+@media screen and (max-width: 480px) {
+  .footer {
+    font-size: 1rem;
+  }
+}
