[update]Redesigned and responsive

--- a/docker/app/src/css/style.css
+++ b/docker/app/src/css/style.css
@@ -40,6 +40,13 @@
   display: inline-block;
 }
 
+@media screen and (max-width: 959px) {
+  .common__btn * {
+    width: 100px;
+    font-size: 12px;
+  }
+}
+
 .header {
   background-color: #A69485;
   font-size: 30px;
