--- a/docker/app/src/css/common.scss
+++ b/docker/app/src/css/common.scss
@@ -33,3 +33,12 @@
     display: inline-block;
   }
 }
+
+@media screen and(max-width: 959px) {
+  .common {
+    &__btn * {
+      width: 100px;
+      font-size: 12px;
+    }
+  }
+}
