--- a/docker/app/src/css/style.css
+++ b/docker/app/src/css/style.css
@@ -95,6 +95,12 @@
   margin: 10px 0;
 }
 
+@media screen and (max-width: 959px) {
+  .login {
+    width: 300px;
+  }
+}
+
 .create {
   width: 400px;
   margin: 0 auto;
