--- a/docker/app/src/css/add.scss
+++ b/docker/app/src/css/add.scss
@@ -5,3 +5,11 @@
     margin: 10px 0;
   }
 }
+@media screen and(max-width: 959px) {
+  .add {
+    width: 300px;
+  }
+}
+@media screen and(max-width: 480px) {
+
+}
