--- a/docker/app/src/css/style.css
+++ b/docker/app/src/css/style.css
@@ -124,7 +124,9 @@
 }
 
 .main__link {
+  display: inline-block;
   color: #466C8C;
+  margin: 20px 0 0 0;
   font-size: 1.4rem;
 }
 
@@ -166,10 +168,12 @@
 }
 
 .main__list__add {
+  display: inline-block;
   padding: 0 10px;
   background-color: #BFC7D9;
   color: #466C8C;
   font-size: 1.4rem;
+  margin: 20px 0 0 0;
 }
 
 .main__list__add:hover {
