[update]Redesigned and responsive

--- a/docker/app/src/css/main.scss
+++ b/docker/app/src/css/main.scss
@@ -1,7 +1,7 @@
 .main {
   margin: 0 auto;
   padding: 0;
-  width: 60%;
+  width: 70%;
   font-size: 1.8rem;
   &__link {
     display: inline-block;
@@ -19,13 +19,17 @@
       border-left: #A69485 solid 10px;
       padding-left: 10px;
       margin: 0;
+      overflow: hidden;
+      width: 80%;
+      text-align: left;
     }
     &__edit {
       margin: 0 0 0 auto;
       padding: 0 10px;
       background-color: #BFC7D9;
       color: #466C8C;
-      font-size: 1.4rem;
+      font-size: 1.3rem;
+      width: 10%;
       &:hover {
         opacity: .7;
       }
@@ -34,7 +38,8 @@
       padding: 0 10px;
       background-color: #BFC7D9;
       color: #466C8C;
-      font-size: 1.4rem;
+      font-size: 1.3rem;
+      width: 10%;
       &:hover {
         opacity: .7;
       }
@@ -77,11 +82,16 @@
       font-size: 0.6rem;
     }
     &__list {
+      &__task {
+        width: 70%;
+      }
       &__edit {
         font-size: 0.6rem;
+        width: 15%;
       }
       &__delete {
         font-size: 0.6rem;
+        width: 15%;
       }
       &__add {
         font-size: 0.6rem;
