--- a/docker/app/src/css/style.css
+++ b/docker/app/src/css/style.css
@@ -119,7 +119,7 @@
 .main {
   margin: 0 auto;
   padding: 0;
-  width: 60%;
+  width: 70%;
   font-size: 1.8rem;
 }
 
@@ -142,6 +142,9 @@
   border-left: #A69485 solid 10px;
   padding-left: 10px;
   margin: 0;
+  overflow: hidden;
+  width: 80%;
+  text-align: left;
 }
 
 .main__list__edit {
@@ -149,7 +152,8 @@
   padding: 0 10px;
   background-color: #BFC7D9;
   color: #466C8C;
-  font-size: 1.4rem;
+  font-size: 1.3rem;
+  width: 10%;
 }
 
 .main__list__edit:hover {
@@ -160,7 +164,8 @@
   padding: 0 10px;
   background-color: #BFC7D9;
   color: #466C8C;
-  font-size: 1.4rem;
+  font-size: 1.3rem;
+  width: 10%;
 }
 
 .main__list__delete:hover {
@@ -203,11 +208,16 @@
   .main__link {
     font-size: 0.6rem;
   }
+  .main__list__task {
+    width: 70%;
+  }
   .main__list__edit {
     font-size: 0.6rem;
+    width: 15%;
   }
   .main__list__delete {
     font-size: 0.6rem;
+    width: 15%;
   }
   .main__list__add {
     font-size: 0.6rem;
